# agent

./: .gitignore  README.md  config.example.json  pyproject.toml
chat_priority_agent/: __init__.py  agent.py  analyzer.py  cli.py  config.py  models.py  notifiers.py  storage.py
chat_priority_agent/sources/: __init__.py  base.py  stdin.py  windows_toast.py  windows_uia.py
prompts/: message_triage.md
tests/: test_agent.py  test_analyzer.py  test_notifiers.py  test_sources.py  test_storage.py
